add insert sort implementation